Add function 'remove_center' (work in progress)

--- a/Annular average.ipynb
+++ b/Annular average.ipynb
@@ -116,6 +116,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_center(data,circle):\n",
+    "    x_orig=circle[0]\n",
+    "    y_orig=circle[1]\n",
+    "    r=circle[2]\n",
+    "    orig_pix = (x_orig,y_orig)   \n",
+    "    central_aperture = CircularAperture(orig_pix, r)\n",
+    "    mask_central = central_aperture.to_mask(method='center') \n",
+    "    im_central=mask_central.multiply(data)\n",
+    "    data[y_orig-r:y_orig+r+1,x_orig-r:x_orig+r+1]=data[y_orig-r:y_orig+r+1,x_orig-r:x_orig+r+1]-im_central\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 162,
    "metadata": {},
    "outputs": [],
@@ -253,6 +271,16 @@
    "source": [
     "write_fits(new_data,hdr,output_fits_name)\n",
     "write_fits(aver_data,hdr,output_fits_name+'_average')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_center_data = remove_center(data,circle)\n",
+    "write_fits(no_center_data,hdr,fits_image_name[0:-5]+'_no_center')"
    ]
   },
   {
