--- a/Parameters.ipynb
+++ b/Parameters.ipynb
@@ -94,16 +94,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S = 1102#en mJy\n",
+    "D = 300# en pc\n",
+    "k_nu = 1.77 #en cm^2/g (del polvo)\n",
+    "f= 100 # gas-to-dust ratio\n",
+    "T_d = np.array([126-23,126,126+23]) #en K (126+-23K)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## M (dust)"
+    "## M (dust) Eq(1) Motte & André (2001):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -114,13 +129,70 @@
     }
    ],
    "source": [
-    "S = 1102#en mJy\n",
-    "D = 300# en pc\n",
-    "k_nu = 1.77 #en cm^2/g (del polvo)\n",
-    "f= 100 # gas-to-dust ratio\n",
-    "T_d = np.array([126-23,126,126+23]) #en K (126+-23K)\n",
     "M_d=5.3e-3*(S/10)*(D/140)**2*(k_nu/f/0.01)**(-1)*(T_d/15)**(-1) #en solar mass (del gas)\n",
     "print(M_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## M(dust) Eq(1) Tobin+2020 (hops370)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tobin (HOPS370)\n",
+    "S = 0.207e-30*u.J*u.cm**(-2)#en Jy\n",
+    "T_d=[180*u.K]\n",
+    "D=392*u.pc\n",
+    "k_nu=0.899*u.cm**2*u.g**(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#us (SVS13)\n",
+    "S = 1.102e-30*u.J*u.cm**(-2)#en Jy\n",
+    "D=300*u.pc\n",
+    "T_d=[i*u.K for i in T_d]\n",
+    "k_nu=1.77*u.cm**2*u.g**(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Quantity 0.16831544 solMass>,\n",
+       " <Quantity 0.13622668 solMass>,\n",
+       " <Quantity 0.11440958 solMass>]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h=constants.h*u.J*u.s\n",
+    "l_onda=1.3*u.mm\n",
+    "c=constants.c*100*u.cm*u.s**-1\n",
+    "nu=c/l_onda.to(u.cm)\n",
+    "k=constants.k*u.J*u.K**-1\n",
+    "B=[2*h*nu**3/c**2 * 1/(np.exp(h*nu/(k*i))-1) for i in T_d]\n",
+    "M_d=[(D.to(u.cm))**2*S/(k_nu*i) for i in B] #de polvo\n",
+    "[i.to(u.M_sun)*100 for i in M_d] #de gas y polvo"
    ]
   },
   {
@@ -132,17 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.07144593e+24 1.69332484e+24 1.43193913e+24] 1 / cm2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_d=2 #diameter in arcsec\n",
     "r_d=d_d/2*D*u.au #radio in AU \n",
@@ -161,17 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.88274285e-10 2.30316115e-10 2.72357946e-10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_Sp_d = 3.9e14*u.cm**(-2) #column density of the species\n",
     "Ab_Sp_d = N_Sp_d/N_H2_d #abundance of the species with respect to H2\n",
@@ -194,20 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.111111111111112e-11\n",
-      "4.2804878048780483e+24 1 / cm2\n",
-      "0.04103806197386875 solMass\n",
-      "0.4559784663763195 solMass\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_l=0.6 #diameter in arcsec\n",
     "D=300 #distance in pc\n",
