Add scape velocity

--- a/Parameters.ipynb
+++ b/Parameters.ipynb
@@ -150,6 +150,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MassT20(S,T,D,wl,k_nu,nu=None,f=100):\n",
+    "    '''Calculates the mass of gas from the dust emission using eq (1) in Tobin (2020).Parameters are: S\n",
+    "    is the dust flux density; T is the dust temperature; D is the distance to the source; k_nu is the dust opacity\n",
+    "    at the frequency of the observation and f is the gas-to-dust ratio (by default 100). Is mandatory to enter the \n",
+    "    units of the parameters S (mJy, Jy, etc), T (K), D (pc, km, m, etc), k_nu (cm^2/g).'''\n",
+    "    h=constants.h*u.J*u.s #Planck's constant\n",
+    "    c=constants.c*100*u.cm*u.s**-1 #Speed of light in cm/s\n",
+    "    if nu is None:\n",
+    "        nu=c/wl.to(u.cm)\n",
+    "    k=constants.k*u.J*u.K**-1\n",
+    "    B=2*h*nu**3/c**2 * 1/(np.exp(h*nu/(k*T))-1)\n",
+    "    M =f*(D.to(u.cm))**2*S/(k_nu*i) #de polvo\n",
+    "    return M\n",
+    "#hacer dos funciones diferentes para wl o nu"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 150,
    "metadata": {},
    "outputs": [
@@ -169,7 +191,8 @@
     "T=126 #temperature of the disk\n",
     "ErT=23 #error of T\n",
     "T_d = [i*u.K for i in [T,T-ErT,T+ErT]]\n",
-    "M=[MassMA01(S,t,D,k_nu) for t in T_d]\n",
+    "M1=[MassMA01(S,t,D,k_nu) for t in T_d]\n",
+    "M2=\n",
     "print(M)"
    ]
   },
@@ -310,6 +333,50 @@
     "print(N_H2_l)\n",
     "print(M_H2_l)\n",
     "print(M_H2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Escape velocity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def EscapeVel(M,r):\n",
+    "    G = constants.G * u.m**3 * u.kg**(-1) * u.s**(-2) #Gravitational constant\n",
+    "    v = np.sqrt(2*G*M.to(u.kg)/r.to(u.m))\n",
+    "    return v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$832.34886 \\; \\mathrm{\\frac{m}{s}}$"
+      ],
+      "text/plain": [
+       "<Quantity 832.3488573 m / s>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = 0.41*u.solMass\n",
+    "r = 1050*u.au\n",
+    "EscapeVel(M,r)"
    ]
   },
   {
